<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>top.dreamlike</groupId>
    <artifactId>uringDemo</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>
    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <panama.version>1.2.2</panama.version>
        <vertx.version>4.3.7</vertx.version>
        <vertx-async.version>1.0</vertx-async.version>
    </properties>
    <modules>
        <module>panama-uring</module>
        <module>example</module>
        <module>liburing</module>
        <module>vertx-io-uring-ext</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>top.dreamlike</groupId>
                <artifactId>panama-uring-linux-x86_64</artifactId>
                <version>${panama.version}</version>
            </dependency>

            <dependency>
                <groupId>top.dreamlike</groupId>
                <artifactId>vertx-io-uring-ext</artifactId>
                <version>${vertx-async.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>